[Videos] Add padding to bottom to prevent video cutoff

--- a/src/styles/Video.css
+++ b/src/styles/Video.css
@@ -1,8 +1,7 @@
 .videos {
     background-color: #c49e9e;
     width: auto;
-    height: 93vh;
-    
+    padding-bottom: 9.9vh;
 }
 
 .Video-Container {
